--- a/css/style.css
+++ b/css/style.css
@@ -47,3 +47,7 @@ p {
   opacity: 0.5;
   pointer-events: none;
 }
+/* --------------------------------- */
+/* PERSONALIEN */
+/* --------------------------------- */
+
