--- a/css/stylepage.css
+++ b/css/stylepage.css
@@ -25,7 +25,42 @@ header {
 
 h1 {
   margin: 0;
-  font-size: 1.8rem;
+  font-size: 1.5rem;
+}
+
+h2 {
+display: flex;
+width: 262px;
+height: 58px;
+flex-direction: column;
+justify-content: center;
+flex-shrink: 0;
+color: #272DCA;
+font-family: Lato;
+font-size: 16px;
+font-style: normal;
+font-weight: 700;
+line-height: 150%; /* 24px */
+letter-spacing: -0.304px;
+}
+
+p {
+color: #000;
+text-align: justify;
+font-family: Lato;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 150%; /* 24px */
+letter-spacing: -0.304px;
+}
+
+.zwischenspeicher {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1rem;
 }
 
 .info-button {
