--- a/css/stylepage.css
+++ b/css/stylepage.css
@@ -4,19 +4,11 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-  background-color: #f9f9f9;
-}
-
-.container {
-  max-width: 400px;
-  margin: auto;
-  background-color: white;
 }
 
 h1 {
-  margin: 0;
-  font-size: 1.5rem;
+  padding-top: 40px;
+  font-size: 60px;
 }
 
 h2 {
@@ -31,19 +23,14 @@ font-family: Arial, Helvetica, sans-serif;
 font-size: 16px;
 font-style: normal;
 font-weight: 700;
-line-height: 150%; /* 24px */
-letter-spacing: -0.304px;
 }
 
 p {
-color: #000;
 text-align: justify;
 font-family: Arial, Helvetica, sans-serif;
-font-size: 16px;
+font-size: 40px;
 font-style: normal;
 font-weight: 400;
-line-height: 150%; /* 24px */
-letter-spacing: -0.304px;
 }
 
 /* ------------------------------------ */
@@ -60,29 +47,33 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 0.5rem;
+
 }
 
 .info-button {
-  width: 32px;
-  height: 32px;
-  border-radius: 50%;
-  background-color: transparent;
-  color: #0DBF5D;
-  border: 2px solid #0DBF5D;
-  font-family: 'Lily Script One', cursive;
-  font-size: 20px;
+  width: 80px;
+  height: 80px;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-weight: normal;
   cursor: pointer;
 }
 
-.next-button {
+.next-button{
   position: absolute;
+  font-size: 30px;
   right: 1rem;
-  top: 1rem;
+  top: 3rem;
+  color: #3b3bbf;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.back-button {
+  position: absolute;
+  font-size: 30px;
+  left: 1rem;
+  top: 3rem;
   color: #3b3bbf;
   text-decoration: none;
   font-weight: bold;
@@ -136,6 +127,66 @@ footer {
   margin-bottom: -0.5rem;
 }
 
+.SaveButtons {
+  margin-top: 80px;
+  display: flex;
+  flex-direction: column; /* Buttons untereinander anordnen */
+  align-items: center;    /* Buttons horizontal zentrieren */
+  justify-content: center; /* Buttons vertikal zentrieren */
+  gap: 2rem;              /* Abstand zwischen den Buttons */
+}
+
+.btnSave {
+  background-color: #272DCA;
+  color: white;
+  font-size: 40px;
+  font-weight: bold;
+  text-align: center;
+  padding: 3rem 6rem;     
+  border: none;
+  border-radius: 40px;  
+  cursor: pointer;
+}
+
+.btnSaveBack {
+  color: #272DCA;
+  background-color: transparent;
+  border: none;
+  font-size: 40px;
+  font-weight: bold;
+}
+
+
+
+/*button {
+  color: rgb(73, 69, 69);
+  border: none;
+  padding: 0.5rem;
+  border-radius: 6px;
+  cursor: pointer;
+  width: 100%;
+  margin-top: 1rem;
+  display: flex;
+  width: 191px;
+  height: 54px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  color: #000000;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%; /* 24px */
+  /*letter-spacing: -0.304px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 1rem auto;
+}
+
 
 /* ------------------------------------ */
 /* Übersicht */
@@ -176,34 +227,7 @@ form input, textarea {
   border: 1px solid #ccc;
 }
 
-button {
-  color: rgb(73, 69, 69);
-  border: none;
-  padding: 0.5rem;
-  border-radius: 6px;
-  cursor: pointer;
-  width: 100%;
-  margin-top: 1rem;
-  display: flex;
-  width: 191px;
-  height: 54px;
-  flex-direction: column;
-  justify-content: center;
-  flex-shrink: 0;
-  color: #000000;
-  text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 150%; /* 24px */
-  letter-spacing: -0.304px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: 1rem auto; /* <- Wichtig: Zentriert horizontal */
-}
+
 
 .zwischenspeicher {
   display: flex;
@@ -228,4 +252,31 @@ button[type="submit"] {
   border-radius: 14px;
   height: 54px;
   width: 191px;
+}
+
+/* ------------------------------------ */
+/* Personalien */
+/* ------------------------------------ */
+
+#personalien {
+  padding-left: 50px;
+  padding-right: 85px;
+}
+
+#personalien input {
+  border: #272DCA;
+  border-style: solid;
+  border-radius: 25px;
+  padding-left: 20px;
+  padding-right: 20px;
+  color: gray;
+  font-size: 40px;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
+  height: 90px;
+}
+
+#personalien p {
+  margin-bottom: 15px;
+  margin-top: 50px;
 }
