--- a/css/stylepage.css
+++ b/css/stylepage.css
@@ -8,7 +8,7 @@ body {
 
 h1 {
   padding-top: 40px;
-  font-size: 60px;
+  font-size: 40px;
 }
 
 h2 {
@@ -31,6 +31,12 @@ font-family: Arial, Helvetica, sans-serif;
 font-size: 40px;
 font-style: normal;
 font-weight: 400;
+}
+
+.container {
+  max-width: 100%;
+  padding: 0 1rem;
+  box-sizing: border-box;
 }
 
 /* ------------------------------------ */
@@ -156,6 +162,30 @@ footer {
   font-weight: bold;
 }
 
+.finish-button {
+  background-color: rgb(65, 57, 57) !important;  /* TESTFARBE */
+  color: white !important;
+  font-size: 20px !important;
+  font-weight: bold;
+  border-radius: 14px;
+  height: 54px;
+  width: 191px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem;
+}
+
+
+.uebersicht{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 
 
 /*button {
@@ -203,7 +233,7 @@ ul.list li {
   align-items: center;
   margin: 0.5rem auto;
   padding: 0 1rem;
-  width: 320px;               /* Etwas schmaler für mehr rechtsseitige Position */
+  width: 300px;               /* Etwas schmaler für mehr rechtsseitige Position */
   height: 75px;
   background: rgba(39, 45, 202, 0.10);
   border: 1px solid #272DCA;
@@ -213,9 +243,22 @@ ul.list li {
   font-weight: 700;
   color: #000;
   letter-spacing: -0.38px;
-  line-height: 150%;
+  line-height: 150%; /* Rutscht leicht nach rechts */
   position: relative;
-  right: -10px;               /* Rutscht leicht nach rechts */
+ 
+
+}              
+  
+ul.list li a {
+  all: unset;            /* Entfernt alle Standard-Stile des Links */
+  cursor: pointer;       /* Zeigt trotzdem den Klick-Cursor */
+  font-family: Arial, Helvetica, sans-serif; /* Damit Schrift gleich bleibt */
+  font-size: 20px;
+  font-weight: 700;
+  color: inherit;        /* Erbt die Farbe vom Eltern-Element */
+  text-decoration: none; /* Keine Unterstreichung */
+  display: block;        /* Damit der Link die ganze Zeile einnimmt (optional) */
+  width: 100%;           /* Optional für besseren Klickbereich */
 }
 
 form input, textarea {
@@ -226,8 +269,6 @@ form input, textarea {
   border-radius: 4px;
   border: 1px solid #ccc;
 }
-
-
 
 .zwischenspeicher {
   display: flex;
