--- a/css/stylepage.css
+++ b/css/stylepage.css
@@ -193,6 +193,82 @@ footer {
 }
 
 
+/* ------------------------------------ */
+/* Login & Register */
+/* ------------------------------------ */
+
+.loginHeader, .registerHeader{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.logoHerz {
+  margin-top: 300px;
+  display: flex;
+  justify-content: center;
+}
+
+#loginForm, .registerForm {
+  padding-left: 40px;
+  padding-right: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: left;
+}
+
+.loginPassword p, .loginEmail p, .registerEmail p, .registerPassword p {
+  font-size: 40px;
+  margin-bottom: 15px;
+  margin-top: 50px;
+}
+
+.loginPassword input, .loginEmail input, .registerPassword input, .registerEmail input {
+  border: #272DCA;
+  border-style: solid;
+  border-radius: 25px;
+  color: gray;
+  font-size: 40px;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
+  height: 90px;
+  display: flex;
+  align-items: center; 
+  box-sizing: border-box; 
+  padding-left: 20px;
+}
+
+.btnSubmit, .btnRegister {
+  background-color: #272DCA;
+  color: white;
+  font-size: 40px;
+  font-weight: bold;
+  text-align: center;
+  padding: 4rem 12rem;
+  border: none;
+  border-radius: 40px !important;
+  cursor: pointer;
+  margin: 80px auto 40px auto; /* Zentriert den Button horizontal */
+  display: flex;
+  align-items: center; /* Zentriert den Inhalt des Buttons */
+  justify-content: center; /* Zentriert den Inhalt des Buttons */
+}
+
+.btnOtherOption {
+  color: #272DCA;
+  background-color: transparent;
+  border: none;
+  font-size: 40px;
+  font-weight: bold;
+  text-decoration: none;
+  text-align: center; /* Text zentrieren */
+  display: flex; /* Flexbox verwenden */
+  justify-content: center; /* Horizontal zentrieren */
+  align-items: center; /* Vertikal zentrieren */
+}
 
 /* ------------------------------------ */
 /* Übersicht */
@@ -304,19 +380,29 @@ button[type="submit"] {
 /* Medizinische Behandlung 2 */
 /* ------------------------------------ */
 
-#medbehandlung2{
+/* #medbehandlung2{
   padding-left: 50px;
   padding-right: 85px;
 }
 
-#medbehandlung2 h2 {
+.medbehandlung2_questions {
   font-size: 40px;
 }
 
-#medbehandlung2 p{
+.question {
   font-size: 40px;
 }
 
-.medbehandlung2_questions{
-  font-size: 40px !important;
+.answerMedbehandlung2 {
+  font-size: 40px;
+  border-radius: 10px;
+  padding: 10px 20px ;
+  background-color: rgba(39, 44, 202, 0.1);
+  border-color: #272DCA;
+  border-style: solid;
 }
+
+.answerMedbehandlung2:active {
+  background-color: #272DCA;
+  color: white;
+} */
