Fehlerbehebungen unter Anleitung Mail Beni Teil 1

--- a/css/stylepage.css
+++ b/css/stylepage.css
@@ -4,6 +4,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
   padding-bottom: 150px; /* Add padding equal to footer height */
 }
 
@@ -192,16 +193,6 @@ footer {
 }
 
 
-.uebersicht{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
-
 /* ------------------------------------ */
 /* Login & Register */
 /* ------------------------------------ */
@@ -220,7 +211,7 @@ footer {
   justify-content: center;
 }
 
-#loginForm, .registerForm {
+#loginForm, #registerForm {
   padding-left: 40px;
   padding-right: 40px;
   display: flex;
@@ -283,6 +274,15 @@ footer {
 /* Übersicht */
 /* ------------------------------------ */
 
+.uebersicht{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+} 
+
 ul.list {
   list-style: none;
   padding: 0;
@@ -290,37 +290,36 @@ ul.list {
 
 ul.list li {
   display: flex;
-  justify-content: space-between; /* Text links, Zahl rechts */
+  justify-content: space-between; 
   align-items: center;
   margin: 0.5rem auto;
   padding: 0 1rem;
-  width: 300px;               /* Etwas schmaler für mehr rechtsseitige Position */
+  max-width: 300px; 
   height: 75px;
   background: rgba(39, 45, 202, 0.10);
   border: 1px solid #272DCA;
   border-radius: 20px;
-  font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
   font-weight: 700;
   color: #000;
   letter-spacing: -0.38px;
-  line-height: 150%; /* Rutscht leicht nach rechts */
+  line-height: 150%; 
   position: relative;
  
 
 }              
   
 ul.list li a {
-  all: unset;            /* Entfernt alle Standard-Stile des Links */
-  cursor: pointer;       /* Zeigt trotzdem den Klick-Cursor */
-  font-family: Arial, Helvetica, sans-serif; /* Damit Schrift gleich bleibt */
+  all: unset;         
+  cursor: pointer;      
+  font-family: Arial, Helvetica, sans-serif; 
   font-size: 20px;
   font-weight: 700;
-  color: inherit;        /* Erbt die Farbe vom Eltern-Element */
-  text-decoration: none; /* Keine Unterstreichung */
-  display: block;        /* Damit der Link die ganze Zeile einnimmt (optional) */
-  width: 100%;           /* Optional für besseren Klickbereich */
-}
+  color: inherit;   
+  text-decoration: none; 
+  display: block;      
+  width: 100%;        
+} 
 
 form input, textarea {
   display: block;
