--- a/css/stylepage.css
+++ b/css/stylepage.css
@@ -239,7 +239,9 @@ footer {
   padding-left: 20px;
 }
 
-.btnSubmit, .btnRegister {
+.btnSubmit,
+.btnRegister,
+.btnaccount {
   background-color: #272DCA;
   color: white;
   font-size: 20px;
@@ -248,11 +250,15 @@ footer {
   padding-left: 20px;
   padding-right: 20px;
   border: none;
+  border-radius: 25px;
   cursor: pointer;
-  margin: 80px auto 30px auto; /* Zentriert den Button horizontal */
+  margin: 80px auto 30px auto;
   display: flex;
-  align-items: center; /* Zentriert den Inhalt des Buttons */
-  justify-content: center; /* Zentriert den Inhalt des Buttons */
+  align-items: center;
+  justify-content: center;
+  height: 60px;
+  width: 80%;
+  max-width: 350px;
 }
 
 
@@ -501,4 +507,98 @@ form input, textarea {
   height: 60px;
   width: 100%;
   padding: 20px;
+}
+
+/* ------------------------------------ */
+/* Willkommensseite & Startseite */
+/* ------------------------------------ */
+.zentriert {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;   /* optional für Abstand nach oben */
+  max-width: 80%;     /* optional, falls das Bild zu groß ist */
+}
+
+.zentriert-alles {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;   /* Optional: für vertikale Zentrierung */
+  min-height: 80vh;          /* Optional: fast volle Höhe */
+  padding: 2rem 1rem;
+  text-align: center;
+}
+
+.zentriert-alles h1,
+.zentriert-alles p {
+  text-align: center;
+  max-width: 600px;
+  width: 100%;
+}
+
+.zentriert-alles img.zentriert {
+  margin-top: 24px;
+  max-width: 80%;
+  height: auto;
+}
+
+.zentriert-alles h1 {
+  margin-top: 0px;   
+  margin-bottom: 20px;
+  font-size: 2rem;
+}
+
+.zentriert-alles p {
+  margin-top: 0;
+  margin-bottom: 18px;
+  font-size: 1.2rem;
+}
+
+.btnaccount,
+.btnSubmit,
+.btnRegister {
+  margin-top: 16px;
+  margin-bottom: 12px;
+}
+
+/* ------------------------------------ */
+/* Startseitebutton & Bild*/
+/* ------------------------------------ */
+
+.primary-button {  background-color: #272DCA;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+  padding-left: 20px;
+  padding-right: 20px;
+  border: none;
+  border-radius: 25px;
+  cursor: pointer;
+  margin: 80px auto 30px auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 60px;
+  width: 80%;
+  max-width: 350px;}
+
+.secondary-button { 
+  color: #272DCA;
+  background-color: transparent;
+  border: none;
+  font-size: 20px;
+  font-weight: bold;
+  text-decoration: none;
+  text-align: center; /* Text zentrieren */
+  display: flex; /* Flexbox verwenden */
+  justify-content: center; /* Horizontal zentrieren */
+  align-items: center; /* Vertikal zentrieren */}
+
+  #willkommen-bild {
+  display: block;
+  width: 100%;
+  height: 700px;
+  object-fit: contain;
 }
