--- a/css/stylepage.css
+++ b/css/stylepage.css
@@ -81,6 +81,7 @@ header {
   color: #3b3bbf;
   text-decoration: none;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .back-button {
@@ -91,6 +92,7 @@ header {
   color: #3b3bbf;
   text-decoration: none;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .header-line {
@@ -153,6 +155,7 @@ footer {
   align-items: center;    /* Buttons horizontal zentrieren */
   justify-content: center; /* Buttons vertikal zentrieren */
   gap: 2rem;              /* Abstand zwischen den Buttons */
+  cursor: pointer;
 }
 
 .btnSave, #saveAndNextBtn{
@@ -175,6 +178,7 @@ footer {
   border: none;
   font-size: 20px;
   font-weight: bold;
+  cursor: pointer;
 }
 
 
@@ -279,6 +283,17 @@ button[type="submit"] {
 /* Übersicht */
 /* ------------------------------------ */
 
+.logout-button {
+  position: absolute;
+  font-size: 20px;
+  left: 1rem;
+  top: 3rem;
+  color: #3b3bbf;
+  text-decoration: none;
+  font-weight: bold;
+  cursor: pointer;
+}
+
 .uebersicht{
   display: flex;
   flex-direction: column;
@@ -352,17 +367,19 @@ form textarea {
 }
 
 .finish-button {
-  background-color: rgb(65, 57, 57) !important;  /* TESTFARBE */
+  background-color: #272DCA;
   color: white !important;
   font-size: 20px !important;
   font-weight: bold;
   border-radius: 20px;
+  border: none;
   height: 65px;
   width: 220px;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 2rem;
+  cursor: pointer;
 }
 
 /* ------------------------------------ */
@@ -479,6 +496,7 @@ form textarea {
   font-size: 20px;
   font-weight: bold;
   margin-bottom: 100px;
+  cursor: pointer;
 }
 
 .btnDownloadPdf {
