--- a/css/stylepage.css
+++ b/css/stylepage.css
@@ -654,3 +654,27 @@ body.startseite .zentriert-alles {
   object-position: top left;
   display: block;
 }
+
+/* Videoseite */
+
+.video-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;     /* zentriert Inhalt horizontal */
+  justify-content: center;
+  padding: 2rem 1rem;
+  max-width: 900px;
+  margin: 0 auto;
+  margin-top: 11rem;
+  text-align: center;
+}
+
+.video-container video {
+  width: 100%;
+  max-width: 100%;          /* verhindert Überbreite */
+  height: auto;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+  margin-bottom: 2rem;
+  display: block;
+}
